--- a/alogin.html
+++ b/alogin.html
@@ -10,6 +10,7 @@
     <meta http-equiv="expires" content="-1">
     <title>Putra Pakuan Hotspot | Redirect</title>
     <link rel="stylesheet" href="assets/css/putrapakuan-v4.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <script language="JavaScript">
 <!--
     function startClock() {
@@ -23,7 +24,7 @@
 </head>
 
 <body onLoad="startClock()">
-    <div class="container height">
+    <div class="container-login height">
         <div class="loading">
             <div class="side">
                     <div class="side-loader"></div>
