--- a/logout.html
+++ b/logout.html
@@ -8,6 +8,7 @@
 <meta http-equiv="expires" content="-1">
 <title>Putra Pakuan Hotspot | KELUAR</title>
 <link rel="stylesheet" href="assets/css/putrapakuan-v4.css">
+<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <script>
     function openLogin() {
 	if (window.name != 'hotspot_logout') return true;
@@ -34,7 +35,7 @@
 
 
                 <form action="$(link-login)" name="login" onSubmit="return openLogin()">
-                <input type="submit" value="MASUK" class="btn">
+                <input type="submit" value="MASUK" class="btn btn-primary">
                 </form>
         </div>
     </div>
