--- a/status.html
+++ b/status.html
@@ -12,6 +12,7 @@ $(endif)
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
 <link rel="stylesheet" href="assets/css/putrapakuan-v4.css">
+<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <script language="JavaScript">
 <!--
 $(if advert-pending == 'yes')
@@ -59,7 +60,7 @@ $(endif)>
                     $(endif)
                         </table>
                     $(if login-by-mac != 'yes')
-                    <input type="submit" value="KELUAR" class="btn">
+                    <input type="submit" value="KELUAR" class="btn btn-primary">
                     $(endif)
                 </form>
         </div>
